--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Panoramic View</string>
+    <string name="mqtt_server_url">tcp://10.0.0.53:1883</string>
+    <string name="topic_name">topic1</string>
+    <string name="client_id">AndroidDevice</string>
+    <string name="mqtt_user">test</string>
+    <string name="mqtt_password">test123</string>
+    <string name="first_message_part">ACTIVATE giroscope </string>
 </resources>
