--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Panoramic View</string>
-    <string name="mqtt_server_url">tcp://10.0.0.53:1883</string>
-    <string name="topic_name">topic1</string>
+    <string name="mqtt_server_url">tcp://mqtt.redfox.escapeconsole.com:1883</string>
+    <string name="topic_name">uboat</string>
     <string name="client_id">periscope</string>
     <string name="mqtt_user">test</string>
     <string name="mqtt_password">test123</string>
